fix: background in actual columns instead or rows.
This is required since columns may overlap without background it
breaks that feature.

--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -1,16 +1,13 @@
 .bt-pagination {
-    &-wrapper {
+    &-container {
         height: 66px;
         max-height: auto;
         width: 100%;
-    }
 
-    &-container {
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding: 10px;
-        height: 100%;
         background: var(--bt-base-bg);
         font-size: var(--bt-font-size-normal);
     }
